# cookiecutter-datascience

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: README.md  pyproject.toml
