[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
keywords = []

[tool.poetry.dependencies]
python = "^3.7"